Implemented FavoriteService#add, FavoriteService#remove and FavoriteService#all methods